[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "versioneer @file:///data/projects/versioneer/"
  ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.black]
line-length = 120
