[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "versioneer"
  ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=pgfinder"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.black]
line-length = 120
