[metadata]
name = pgfinder
version = 0.0.1
description =
long_description = file: README.md
url = https://github.com/Mesnage-Org/pgfinder
author = pgfinder Team
license = GNU Lesser GPLv3

[options]
python_requires = >=3.7

zip_safe = False

install_requires =
  matplotlib
  numpy
  pandas
  ruamel.yaml
  pysqlite3
  pyyaml


packages = find:

[options.extras_require]
tests =
  pytest>=7.0
  pytest-cov
  pytest-mpl

docs =
  Sphinx<5.0
  sphinx_rtd_theme
  myst_parser
  sphinx_markdown_tables
  pydata_sphinx_theme
  sphinxcontrib-mermaid

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*
