[metadata]
name = pgfinder
version = 0.0.2
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mesnage-Org/pgfinder
author = pgfinder Team
license = GNU Lesser GPLv3
project_urls =
  Bug Tracker = https://github.com/Mesnage-Org/pgfinder/issues
  Documentation = https://mesnage-org.github.io/pgfinder/
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7

zip_safe = False

install_requires =
  matplotlib
  numpy
  pandas
  ruamel.yaml
  pysqlite3
  pyyaml


packages = find:

[options.extras_require]
tests =
  pytest>=7.0
  pytest-cov
  pytest-mpl

docs =
  sphinx<5.0
  myst_parser
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*
