[metadata]
name = pgfinder
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mesnage-Org/pgfinder
author = PGFinder Team
author_email = pgfinder@sheffield.ac.uk
license = GNU Lesser GPLv3
project_urls =
  Bug Tracker = https://github.com/Mesnage-Org/pgfinder/issues
  Documentation = https://mesnage-org.github.io/pgfinder/
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7

zip_safe = False

include_package_data = true

install_requires =
  matplotlib
  numpy
  pandas
  ruamel.yaml
  pysqlite3
  pyyaml

packages = find:

[options.extras_require]
tests =
  pytest>=7.0
  pytest-cov
  pytest-mpl
  pytest-regtest

docs =
  sphinx<5.0
  myst_parser
  numpydoc
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinx_rtd_theme
  sphinxcontrib-mermaid
  sphinxcontrib-napoleon
  sphinx-autodoc-typehints

pypi =
  build
  versioneer>=0.26
  wheel

[options.packages.find]
exclude = tests*

[bdist_wheel]
universal = 1

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

[options.entry_points]
console_scripts =
  find_pg = pgfinder.find_pg:main

[versioneer]
VCS = git
style = pep440
versionfile_source = pgfinder/_version.py
versionfile_build = pgfinder/_version.py
tag_prefix = v
parentdir_prefix =